--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'South America -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: The White Mice
 url: http://www.gutenberg.org/ebooks/27232
